# verbatimeter

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: 0001-standalone-package.md  0002-candidate-side-lcs-alignment.md  0003-best-segment-and-chunking.md  0004-tiktoken-token-counting.md  0005-three-surfaces-and-source-resolution.md  0006-source-loading-optional-extras.md  0007-scopes-and-ansi-rendering.md  0008-thin-init-core-layout.md  0009-contiguous-default-and-unicode-normalization.md  0010-verbatim-overlap-whole-text-default.md  0011-scope-verbatim-and-paraphrase.md  0012-match-window-rouge-and-reporting-fixes.md  0013-explicit-inputs-single-tokenizer.md  0014-functools-cache-memoization.md  0015-decorator-always-returns-result.md  0016-spaced-script-multilingual-tier.md  0017-automatic-streaming-verification.md  README.md  rag-agent-integration.md
examples/: README.md  openai_example.py  rag_streaming_example.py
examples/basics/: 01_library.py  02_decorator.py  03_custom_tokenizer.py  04_matching_modes.py  05_overlap.py  README.md  answer.txt  qa_pairs.py  source.txt
profiling/: benchmark.py
src/verbatimeter/: __init__.py  align.py  core.py
tests/: test_french.py  test_multilingual.py  test_profiling.py  test_quotations.py  test_readme_claims.py  test_verbatimeter.py
tests/data/: sample_answer.txt  sample_source.txt
